@@ -1,4 +1,4 @@
-# Copyright (C) 2005, 2006 Canonical Ltd
+# Copyright (C) 2005, 2006, 2008 Canonical Ltd
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -24,6 +24,9 @@ from bzrlib import (
     )
 from bzrlib.errors import BzrBadParameterNotString, NoSuchFile, ReadOnlyError
 from bzrlib.lockable_files import LockableFiles, TransportLock
+from bzrlib.symbol_versioning import (
+    deprecated_in,
+    )
 from bzrlib.tests import TestCaseInTempDir
 from bzrlib.tests.test_smart import TestCaseWithSmartMedium
 from bzrlib.tests.test_transactions import DummyWeave
@@ -35,11 +38,17 @@ from bzrlib.transport import get_transport
 
 
 # these tests are applied in each parameterized suite for LockableFiles
+#
+# they use an old style of parameterization, but we want to remove this class
+# so won't modernize them now. - mbp 20080430
 class _TestLockableFiles_mixin(object):
 
     def test_read_write(self):
         self.assertRaises(NoSuchFile, self.lockable.get, 'foo')
-        self.assertRaises(NoSuchFile, self.lockable.get_utf8, 'foo')
+        self.assertRaises(NoSuchFile,
+            self.applyDeprecated,
+            deprecated_in((1, 5, 0)),
+            self.lockable.get_utf8, 'foo')
         self.lockable.lock_write()
         try:
             unicode_string = u'bar\u1234'
@@ -51,16 +60,24 @@ class _TestLockableFiles_mixin(object):
             self.lockable.put('foo', StringIO(byte_string))
             self.assertEqual(byte_string,
                              self.lockable.get('foo').read())
+            unicode_stream = self.applyDeprecated(
+                deprecated_in((1, 5, 0)),
+                self.lockable.get_utf8,
+                'foo')
             self.assertEqual(unicode_string,
-                             self.lockable.get_utf8('foo').read())
+                unicode_stream.read())
             self.assertRaises(BzrBadParameterNotString,
                               self.lockable.put_utf8,
                               'bar',
                               StringIO(unicode_string)
                               )
             self.lockable.put_utf8('bar', unicode_string)
+            unicode_stream = self.applyDeprecated(
+                deprecated_in((1, 5, 0)),
+                self.lockable.get_utf8,
+                'bar')
             self.assertEqual(unicode_string,
-                             self.lockable.get_utf8('bar').read())
+                unicode_stream.read())
             self.assertEqual(byte_string,
                              self.lockable.get('bar').read())
             self.lockable.put_bytes('raw', 'raw\xffbytes')
